--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>TRAFFIC SIM</h1>
+    <h1>TRAFFIC SIM TS</h1>
     <canvas id="game-canvas" width="800" height="450"></canvas>
-    <script src="scripts.js"></script>
+    <script type="module" src="Game.js"></script>
 </body>
 </html>
