--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 <body>
     <h1>TRAFFIC SIM TS</h1>
     <canvas id="game-canvas" width="800" height="450"></canvas>
-    <script type="module" src="Game.js"></script>
+    <script type="module" src="./dist/Game.js"></script>
 </body>
 </html>
